<resources>
    <string name="app_name">TeamReg</string>
    <string name="action_settings">Settings</string>
    <string name="teamNameTextView">Team Name</string>
    <string name="memberName1TextView">Name 1</string>
    <string name="memberName2TextView">Name 2</string>
    <string name="memberName3TextView">Name 3</string>
    <string name="memberNo1TextView">Entry No.</string>
    <string name="memberNo2TextView">Entry No.</string>
    <string name="memberNo3TextView">Entry No.</string>
    <string name="submitButton">Submit</string>
    <string name="title_activity_main2">Author</string>
    <string name="hello_world">Hello world!</string>
    <string name="DismissDiag">Dismiss</string>
    <string name="AboutUsTitle">About Us</string>
    <string name="Author">\tTeam: Friends\n
        \tBipul Kumar:\n
        2014CS50282\n
        \tDeepak Bansal:\n
        2014CS50435\n
        \tShivank Goel:\n
        2014CS10565\n
    </string>
    <string name="about_us">About Us</string>
    <string name="title_activity_home__screen">Home_Screen</string>
    <string name="home_screen_message">Want To Register For COP 290 !</string>
    <string name="continuebutton">Continue</string>
    <string name="courseDescription">
        \tCOP290-Design Practices\n
        L-T-P => 0-0-6\n
        Android Development\n
        Team Size: 3\n
        Prerequisites:\n
        COL100 and COL106\n
        Prof. Vinay Ribeiro
    </string>
    <string name="courseDescriptionTittle">Course Description</string>

</resources>
