<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.shivank.teamregistration.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/background">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTeamName"
        android:hint="@string/teamNameTextView"
        android:textColorHint="@color/background"
        android:textSize="30dp"
        android:ems="@android:integer/config_shortAnimTime"
        android:layout_gravity="left"
        android:textStyle="italic"
        android:textColorHighlight="@color/white"
        android:inputType="textCapCharacters"
        android:padding="12dp"
        android:background="@drawable/shape2"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/textcolor"
       />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName1"
        android:hint="@string/memberName1TextView"
        android:textColorHint="@color/background"
        android:textSize="30dp"
        android:ems="@android:integer/config_shortAnimTime"
        android:layout_gravity="left"
        android:textStyle="italic"
        android:textColorHighlight="@color/white"
        android:inputType="textCapCharacters"
        android:padding="12dp"
        android:background="@drawable/shape3"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:textColor="@color/textcolor"
        android:layout_marginBottom="3dp"
       />




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEntry1"
        android:hint="@string/memberNo1TextView"
        android:textColorHint="@color/background"
        android:textSize="30dp"
        android:ems="@android:integer/config_shortAnimTime"
        android:layout_gravity="left"
        android:textStyle="italic"
        android:textColorHighlight="@color/white"
        android:inputType="textCapCharacters"
        android:padding="12dp"
        android:background="@drawable/shape3"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/textcolor"

        />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName2"
        android:hint="@string/memberName2TextView"
        android:textColorHint="@color/background"
        android:textSize="30dp"
        android:ems="@android:integer/config_shortAnimTime"
        android:layout_gravity="left"
        android:textStyle="italic"
        android:textColorHighlight="@color/white"
        android:inputType="textCapCharacters"
        android:padding="12dp"
        android:background="@drawable/shape5"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:textColor="@color/textcolor"
        android:layout_marginBottom="3dp"

        />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEntry2"
        android:hint="@string/memberNo2TextView"
        android:textColorHint="@color/background"
        android:textSize="30dp"
        android:ems="@android:integer/config_shortAnimTime"
        android:layout_gravity="left"
        android:textStyle="italic"
        android:textColorHighlight="@color/white"
        android:inputType="textCapCharacters"
        android:padding="12dp"
        android:background="@drawable/shape5"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/textcolor"

        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName3"
        android:hint="@string/memberName3TextView"
        android:textColorHint="@color/background"
        android:textSize="30dp"
        android:ems="@android:integer/config_shortAnimTime"
        android:layout_gravity="left"
        android:textStyle="italic"
        android:textColorHighlight="@color/white"
        android:inputType="textCapCharacters"
        android:padding="12dp"
        android:background="@drawable/shape6"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:textColor="@color/textcolor"
        android:layout_marginBottom="3dp"

        />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEntry3"
                android:hint="@string/memberNo3TextView"
                android:textColorHint="@color/background"
                android:textSize="30dp"
                android:ems="@android:integer/config_shortAnimTime"
                android:layout_gravity="left"
                android:textStyle="italic"
                android:textColorHighlight="@color/white"
                android:inputType="textCapCharacters"
                android:padding="12dp"
                android:background="@drawable/shape6"
                android:foregroundGravity="center"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/textcolor"

                />

            <Button
                android:background="@drawable/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitButton"
        android:id="@+id/submitButton"
                android:ems="24"
                android:textSize="25dp"
                android:textColor="@color/background"
                />

        </LinearLayout>
    </ScrollView>

</TableLayout>
