<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.shivank.teamregistration.Home_Screen"
    tools:showIn="@layout/activity_home__screen"
    android:background="@color/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewHomeScreen"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/appNameTextView"
        android:ems="@android:integer/config_longAnimTime"
        android:textStyle="italic"
        android:textSize="50dp"
        android:textColor="@color/white"
        android:fontFamily="comic sans MS"
        android:gravity="center"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="44dp"
        android:src="@mipmap/ic_launcher"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:layout_below="@+id/appNameTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_screen_message"
        android:id="@+id/homeMessageTextView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="italic"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuebutton"
        android:id="@+id/continueButton"
        android:layout_below="@+id/homeMessageTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:textSize="20dp"
        android:padding="20dp"
        android:gravity="center"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
        android:onClick="switchscreen"
        />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
